Fixed spacing and values

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ section .wrapper {
 	min-height: calc(100vh);
 	width: 83.33333%;
 	margin-left: 16.666667%;
-	margin-top: 75px;
+	margin-top: 25px;
 	padding: 2rem 1rem 1rem;
 	padding-left: 10%;
 }
@@ -408,34 +408,36 @@ section .wrapper {
 }
 /*---------- Navigation Items -----------*/
 .button-demo {
-	font-size: 24px;
+	font-size: 0.8rem;
+	letter-spacing: 0.02em;
 	font-family: 'Roboto';
 	width: 22rem;
 	text-align: center;
+
 }
 
 .psbutton {
 	background-color: #4F90C5;
-	padding: 0.5em;
+	padding: 1em;
 	color: #FFFFFF;
 }
 
 .psbutton:hover {
 	background-color: #3B6A91;
-	padding: 0.5em;
+	padding: 1em;
 	color: #FFFFFF;
 	font-weight: bold;
 }
 
 .sobutton {
 	border: 1px solid #4F90C5;
-	padding: 0.5em;
+	padding: 1em;
 	color: #4F90C5;
 }
 
 .sobutton:hover {
 	border: 1px solid #3B6A91;
-	padding: 0.5em;
+	padding: 1em;
 	color: #3B6A91;
 	font-weight: bold;
 }
